option(
    'dev_mode',
    type: 'boolean',
    value: false,
    description: 'Sets the N00B_DEV define; this is primarily to enable some diagnostic routines in the compiler for printing during debugging, etc.',
)

option(
    'enable_lto',
    type: 'boolean',
    value: false,
    description: 'Enable link-time optimizations',
)

option(
    'show_gc_stats',
    type: 'feature',
    value: 'auto',
    description: 'Print basic stats after collections',
)

option(
    'use_memcheck',
    type: 'combo',
    choices: ['off', 'on', 'strict'],
    value: 'off',
    description: 'Enable internal lightweight heap checks',
)

option(
    'use_asan',
    type: 'feature',
    value: 'disabled',
    description: 'Use address sanitizer. Default off — n00b does its own memory management, so ASAN provides limited signal and significantly slows the test suite. Opt in explicitly via `-Duse_asan=enabled` (or N00B_BUILD_ASAN=1 via build.sh).',
)

option(
    'use_ubsan',
    type: 'feature',
    value: 'auto',
    description: 'Use undefined behavior sanitizer',
)

option(
    'enable_debug',
    type: 'boolean',
    value: false,
    description: 'Enable debug logging, setting N00B_DEBUG. Any debug logging option is ignored if this is false.'
    )
    
option('vcpkg_lib',
        type: 'string',
        value: '',
        description: 'vcpkg lib path')

option('vcpkg_inc',
        type: 'string',
        value: '',
        description: 'vcpkg include path')

option('using_musl',
    type: 'boolean',
    value: false)

option('using_build_script',
    type: 'boolean',
    value: false)

option('enable_cocoa',
    type: 'boolean',
    value: true,
    description: 'Build the Cocoa rendering backend (macOS only).')

option('enable_notcurses',
    type: 'boolean',
    value: true,
    description: 'Build the notcurses rendering backend (requires notcurses >= 3.0.10).')

option('enable_freetype',
    type: 'boolean',
    value: true,
    description: 'Build with FreeType font rendering (required for pixel text in notcurses).')

# ----------------------------------------------------------------------
# n00b_attest module — signer backends
# ----------------------------------------------------------------------
# TODO(WP-002): this option is a placeholder declared in WP-001 Phase 1
# so the value space is reserved on the build surface before any signer
# backend ships. It is intentionally NOT consumed by any meson logic in
# this WP — there are no backends yet, and the choice has no effect on
# the produced libn00b. WP-002 (signing) wires the first real value
# ('file') through to a conditional `n00b_attest_src` extension and
# starts switching on the value here. Until then this is a no-op knob.
option('attest_backend',
    type: 'combo',
    choices: ['none', 'file', 'env', 'keychain', 'op', 'vault',
              'aws_sm', 'gcp_sm', 'az_kv'],
    value: 'none',
    description: 'n00b_attest signer backend (no-op placeholder; WP-001 reserves the option name, WP-002 wires the first real value).')

# ----------------------------------------------------------------------
# libn00b_aws — optional AWS substrate over the n00b-aws-shim cdylib
# ----------------------------------------------------------------------
# When enabled, builds libn00b_aws as a pure-C wrap of `n00b-aws-shim`,
# a Rust cdylib that re-exports aws-sdk-rust operations as `extern "C"`.
# At build time we run `~/slop/bin/demangle` against the shim to
# generate the C header that libn00b_aws includes; at runtime the C
# code dlsyms the shim symbols. No libc++ in this loop — only Tokio
# (loaded via the shim's own dependencies).
#
# Per D-062 amended 2026-05-27 (see [[project_n00b_aws_via_rust_shim]]
# in auto-memory).
#
# Requires the prebuilt shim. macOS: `brew install n00b-aws-rust`
# (forthcoming tap); Linux: apt PPA; Windows: vcpkg port. During
# development the in-repo Rust crate at subprojects/n00b-aws-shim/
# satisfies the dependency without external install.
option('enable_aws',
    type: 'boolean',
    value: false,
    description: 'Build libn00b_aws (requires the n00b-aws-shim cdylib).')

option('aws_shim_prefix',
    type: 'string',
    value: '',
    description: 'Optional explicit n00b-aws-shim install prefix. Leave empty to fall back to the in-repo subprojects/n00b-aws-shim/ cargo build.')

option('demangle_bin',
    type: 'string',
    value: '',
    description: 'Optional explicit path to the demangle utility. Leave empty to look up `demangle` on PATH (falling back to ~/slop/bin/demangle when present).')
