option('extensions',
       type : 'array',
       value : ['c', 'nc'])
option('coverage',
       type: 'boolean',
       value: false,
       description: 'Build with Clang source-based code coverage instrumentation')
option('cc_path',
       type: 'string',
       value: '',
       description: 'Location of the core C23 compiler')
