# Sources for the n00b attest module: in-toto Statement v1
# construction, DSSE envelope encode/decode, the signer
# abstraction + file backend (WP-002 Phase 2), the verifier
# abstraction + file backend (WP-003 Phase 2), the OCI client
# substrate + auth resolver (WP-004 Phase 1), and (in later
# WPs) more signer/verifier backends, OCI 1.1 registry
# referrers, etc.

n00b_attest_src = files(
    'n00b_attest_module.c',
    'statement.c',
    'dsse.c',
    'error.c',
    'json_util.c',
    'signer.c',
    'cli.c',
    'backends/file.c',
    'verifier.c',
    'verifier_backends/file.c',
    'oci/registry.c',
    'oci/auth.c',
    'oci/manifest.c',
)
