# Sources for the n00b chalk codec module: artifact insertion,
# deletion, extraction, and hashing for ELF / Mach-O / GGUF /
# SafeTensors / ZIP / Python .pyc / source / sidecar / certs.

n00b_chalk_src = files(
    'base32v.c',
    'normalize.c',
    'mark.c',
    'codec_table.c',
    'file_io.c',
    'pyc.c',
    'sidecar.c',
    'certs.c',
    'macos_wrap.c',
    'gguf_core.c',
    'gguf.c',
    'safetensors_core.c',
    'safetensors.c',
    'macho_core.c',
    'macho.c',
    'lang_table.c',
    'source.c',
    'elf.c',
    'elf_fallback.c',
    'zip.c',
    'pe.c',
)
