# Sources for the n00b core: allocators, GC, threading primitives,
# strings core, type registry, sha256, etc.

n00b_core_src = files(
    'exit.c',
    'init.c',
    'thread.c',
    'mmaps.c',
    'alloc.c',
    'arena.c',
    'pool.c',
    'memory_info.c',
    'hash.c',
    'stw.c',
    'gc.c',
    'gc_map.c',
    'buffer.c',
    'file_map.c',
    'file.c',
    'data_lock.c',
    'string.c',
    'lock_accounting.c',
    'mutex.c',
    'rwlock.c',
    'condition.c',
    'type_registry.c',
    'builtin_types.c',
    'sha256.c',
    'sha512.c',  # SHA-384 + SHA-512 (FIPS 180-4) — needed by RS384/RS512 JWS.
)
