# Logic / constraint solver — CLPFD (finite-domain) and ASP (answer-
# set programming) primitives plus the logic-programming DSL.

n00b_logic_src = files(
    'clpfd_domain.c',
    'clpfd_store.c',
    'clpfd_label.c',
    'asp_intern.c',
    'asp_relation.c',
    'asp_rule.c',
    'asp_engine.c',
    'logic_program.c',
    'logic_dsl.c',
)
