# Machine-learning library: feature-hashed binary logistic-regression
# classifier with named rule groups, training/scoring split, blob I/O,
# and "strongest rules" inspection.

n00b_ml_src = files(
    'ml_core.c',
    'ml_eval.c',
    'ml_inspect.c',
    'ml_io.c',
    'ml_layered.c',
    'ml_monitor.c',
    'ml_presets.c',
    'ml_score.c',
    'ml_train.c',
)
