# n00b language compiler — tokenizer/type-spec/compile entrypoints,
# the embedded FFI runtime, and object-file emission + linking.

n00b_compiler_src = files(
    'n00b_tokenizer.c',
    'n00b_type_spec.c',
    'n00b_compile.c',
    'n00b_module_loader.c',
    'n00b_type_map.c',
    'embed.c',
    'embed_ffi.c',
    'eval.c',
    'n00b_objfile_emit.c',
    'n00b_compile_link.c',
)
