# Parsers — JSON, generic tokenizers, scan recipes.

n00b_parsers_src = files(
    'ijson.c',
    'json.c',
    'scanner.c',
    'token_stream.c',
    'scan_recipes.c',
    'tokenizer_registry.c',
    'text_tokenizer.c',
    'shell_tokenizer.c',
    'lisp_tokenizer.c',
    'json_tokenizer.c',
    'toml.c',
)
