# Slay — grammar / parser toolkit (Earley + PWZ), annotation walker,
# analysis passes, transforms, and MIR-backed codegen.

n00b_slay_src = files(
    'token.c',
    'annotation.c',
    'grammar.c',
    'unicode_class.c',
    'parse_tree.c',
    'parse_forest.c',
    'pwz.c',
    'bnf.c',
    'earley.c',
    'earley_forest.c',
    'n00b_parse.c',
    'commander.c',
    'commander_tok.c',
    'commander_json.c',
    'symtab.c',
    'tree_util.c',
    'annot_walk.c',
    'annot_scope.c',
    'annot_symtab.c',
    'annot_cf.c',
    'annot_types.c',
    'infer_expr.c',
    'cfg.c',
    'cdg.c',
    'dfg.c',
    'diagnostic.c',
    'analyze.c',
    'debug.c',
    'c_tokenizer.c',
    'transform.c',
    'codegen.c',
    'codegen_mir.c',
    'codegen_builtins.c',
    'pprint.c',
    'rewrite.c',
)
